# ChangeLog for dev-python/pygooglechart
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  13 Apr 2011; Justin Lecher <jlec@gentoo.org> pygooglechart-0.2.1.ebuild:
  Fix for python ABI stuff

  31 Mar 2011; Justin Lecher <jlec@gentoo.org> +metadata.xml:
  Fixed up ebuild
