@@ -1,1 +1,1 @@
-DIST pygooglechart-0.2.1.tar.gz 25078 SHA256 0748c77e6a9f8b59f8b15f323b13b5856fb51bb42fa21e448d8ca2da6a228f39
+DIST pygooglechart-0.3.0.tar.gz 27388 SHA256 f9a6fac4543c592381ccdc6b6384016c283ab74e15891c67593ff1b6167cee4d SHA512 673b3bfe058c068d0a66fe679de7fd9993b8182037878e26ff467dcc7a59d7bb0f26a407dac3faf9c3f7b83c1b7c382631a291f7e4e4445d4ef930ce1cbaea11 WHIRLPOOL a31256a1093fed5de22a2d2ec53bd019345ebfb10c967678d7ee9bf47744d51b00daf094dc0ead82654ae0b352b06d1fac859263f710939a8a7d8def307d8982
