@@ -1,22 +1,18 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
-EAPI="3"
+EAPI=5
 
-PYTHON_DEPEND="2"
-SUPPORT_PYTHON_ABIS="1"
-RESTRICT_PYTHON_ABIS="3.1"
+PYTHON_COMPAT=( python{2_6,2_7} )
 
-inherit distutils
+inherit distutils-r1
 
 DESCRIPTION="Complete Python wrapper for the Google Chart API"
-HOMEPAGE="http://pygooglechart.slowchop.com/"
+HOMEPAGE="http://pygooglechart.slowchop.com/ https://pypi.python.org/pypi/pygooglechart/"
 SRC_URI="http://pygooglechart.slowchop.com/files/download/${P}.tar.gz"
 
 SLOT="0"
-KEYWORDS="~amd64 ~x86"
 LICENSE="GPL-3"
+KEYWORDS="~amd64 ~x86"
 IUSE=""
-
-PYTHON_MODNAME=${PN}.py
