@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/pygooglechart
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  11 Jun 2013; Justin Lecher <jlec@gentoo.org> -pygooglechart-0.2.1.ebuild,
+  +pygooglechart-0.3.0.ebuild, metadata.xml:
+  Version Bump; bump to EAPI=5 and new python r1 eclasses
 
   13 Apr 2011; Justin Lecher <jlec@gentoo.org> pygooglechart-0.2.1.ebuild:
   Fix for python ABI stuff
